# iput-3rd

./: README.md  app.py
.github/workflows/: openhands-resolver.yml
AISys-SocialApp/: AI社会応用_事例1発表レポート_OK240100(藤村勇仁).docx  AI社会応用_事例2設計企画書_OK240100(藤村勇仁).docx
DeepLearning/: .gitignore  README.md  pyproject.toml
DeepLearning/01/: conv-result.txt  multiply-result.txt  task02.md  task1.md  task1.py  task2-conv.py  task2-multiply.py  task2.md
DeepLearning/01/task02/: MyStyle.bst  macro.tex  main.tex  titlepage.tex
DeepLearning/01/task02/materials/: multiply-result.txt
DeepLearning/04/: data_with_units.csv  mnist.py  mnist_test.py  sample-inusarukiji.csv
DeepLearning/04/task03/: latexmkrc  macro.tex  main.tex  reference.bib  titlepage.tex
DeepLearning/05/: compare_exp.py  experiment.py  mnist.py  model.py  plot_results.py  plot_time_accuracy.py  separate.py  train.py  train_with_time.py
DeepLearning/05/task04/: main.tex  titlepage.tex
DeepLearning/06/: Q-learning2.py
EngCom/: IIIa class A Presentation schedule.docx
EngCom/scripts/: Unit 1 Listening Script.docx  Unit 2 Listening Script.docx  Unit 3 Listening (p. 28) Script.docx  Unit 4 Listening (p. 36) Script.docx
EngCom/worksheets/: Unit 2 Sustainable Cities 2 Copenhagen worksheet.docx  Unit 3 Energy 45 Wind Energy (p. 137) worksheet.docx
NatLang-Proc/: README.md  morpho.py  pyproject.toml
NatLang-Proc/task01/: gen-gram-spacy.py  gen-gram.py  task01.md
Software-Dev/UML作成ツールastah_インストール用-20250408/: astah_faculty_license.xml
TechEng/: mome.txt
docs/: README.md  rules.md
(+23 files in other folders)
