[project]
name = "natlang-proc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fjmrytfjsn", email = "fjmrytfjsn@gmail.com" }
]
dependencies = [
    "spacy>=3.8.5",
    "pip>=25.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/natlang_proc"]
